--- a/scss/_spiner.scss
+++ b/scss/_spiner.scss
@@ -1,7 +1,8 @@
 .spinner {
     box-sizing: border-box;
     cursor: pointer;
-    z-index: 102;
+    position: relative;
+    z-index: 999;
     height: 14px;
     width: 18px;
     margin: 38px 20px;
@@ -59,59 +60,85 @@
       }
 } 
 
-
+.burger__menu--bg{
+  display: none;
+  background: #000;
+  height: 100%;
+  opacity: 0.4;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  top: 0;
+  left: 0;
+}
 .burger__menu{
-display: none;
-font-family: 'Roboto', sans-serif;
-font-size: 20px;
-line-height: 30px;
-font-weight: bold;
-text-transform: uppercase;
-overflow: auto;
+  display: none;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: bold;
+  text-transform: uppercase;
+  overflow: auto;
 
-z-index: 101;
+  z-index: 101;
 
-position: absolute;
-background-color: rgba(71, 72, 73, 0.93);
-width: 250px;
-height: 100%;
-top: 0;
-right: 0;
-margin: auto;
+  position: absolute;
+  background-color:rgba(226, 226, 226, 0.93);
+  width: 250px;
+  height: 100%;
+  top: 0;
+  right: 0;
+  margin: auto;
 
-h4{
-position: absolute;
+  h4{
+  position: absolute;
 
-width: 1px;
-height: 1px;
-border: 0;
-padding: 0;
+  width: 1px;
+  height: 1px;
+  border: 0;
+  padding: 0;
 
-white-space: nowrap;
+  white-space: nowrap;
 
-clip-path: inset(100%);	
-clip: rect(0 0 0 0);
-overflow: hidden;
+  clip-path: inset(100%);	
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+  }
+
+  .site-navigation{
+  transition: 0s;
+  margin-top: 130px;
+  margin-left: 40px;
+
+    a{
+    color: #383636;
+    text-decoration: none;
+    }
+
+    .burger__buttons{
+    margin-bottom: 20px;
+
+    a{
+      &:active{
+          color: #FFBD48;
+      }
+    }
+  #Home:active{
+      fill: #FFBD48;
+  }
+    }
+    .burger__buttons.first{
+      float: left;
+      margin-right: 30px;
+    }
+  }
+
+  img{
+  max-width: 200px;
+  padding: 30px;
+  } 
 }
 
-.site-navigation{
-transition: 0s;
-margin-top: 130px;
-margin-left: 40px;
-
-a{
-color: #383636;
-text-decoration: none;
+.modal-show{
+  display: block;
 }
-
-.burger__buttons{
-margin-bottom: 20px;
-}
-}
-
-img{
-max-width: 200px;
-padding: 30px;
-} 
-}
-
