--- a/scss/all.scss
+++ b/scss/all.scss
@@ -94,7 +94,7 @@ header{
                         color: #FFBD48;
                     }
                 }
-                #Home:hover{
+                .Home:hover{
                     fill: #FFBD48;
                 }
             }
